Added validation to the configuration check to detect MySQL or disk quota synchronization that conflicts with Virtualmin.
If a script like Wordpress has been upgraded outside of Virtualmin, it's new version will be detected to prevent false warnings about needing to upgrade.
Script update notification, quota and backup emails now contain a link to Virtualmin, using a URL configurable on the Module Config page.
When alias virtual servers are created, files from /etc/skel are no longer copied into their home directories as they are not needed.
When a virtual server with a self-signed SSL certificate is renamed, the certificate is re-generated to match the new domain name.
Added command-line scripts to list, generate and install SSL keys and certificates. These are list-certs.pl, generate-cert.pl and install-cert.pl respectively.
Domain owners can now be granted permissions to edit the remote MySQL client hosts for the databases they manage.
Added an option on the Spam and Virus Delivery page to enable spamtrap and hamtrap aliases on a per-domain level, to which spam and non-spam can be forwarded by users for addition to SpamAssassin's learning engine. These can also be enabled for new domains in server templates, and changed using the modify-spam command-line API.
The delete-domain.pl command-line script now accepts multiple --domain parameters, and can also delete virtual servers by username with the --user parameter.
For new Virtualmin installs, Apache logs are now stored under /var/log/virtualmin and just linked from the ~/logs directory. This avoids problems with Apache crashing when the logs directory is deleted.
The Disk Quota Monitoring page can now also be used to find mailboxes that are approaching or over their quota, and can send email to domain owners and individual mailboxes as well as the master admin.